--- a/SOP_v1/app/src/main/res/layout/edit_step_dialog.xml
+++ b/SOP_v1/app/src/main/res/layout/edit_step_dialog.xml
@@ -3,17 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="專案名稱:"/>
-
     <EditText
-        android:id="@+id/edtProjectName"
+        android:id="@+id/editStepName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-
-
 
 </LinearLayout>
