--- a/SOP_v1/app/src/main/res/layout/content_add_new_one.xml
+++ b/SOP_v1/app/src/main/res/layout/content_add_new_one.xml
@@ -9,19 +9,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cc.ncu.edu.tw.sop_v1.borrowspace"
-    tools:showIn="@layout/activity_borrowspace"
-    android:weightSum="1">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="cc.ncu.edu.tw.sop_v1.add_new_one"
+    tools:showIn="@layout/activity_add_new_one">
 
     <ExpandableListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/android:list"
-        android:paddingTop="50dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
+        android:id="@+id/android:list" />
 
 </LinearLayout>
