--- a/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
+++ b/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/contextMenuItemAdd"
-        android:title="新增步驟"/>
+    <item android:id="@+id/contextMenuItemAddCommon"
+        android:title="新增一般步驟"/>
+
+    <item android:id="@+id/contextMenuItemAddParallel"
+        android:title="新增平行步驟"/>
+
 
     <item android:id="@+id/contextMenuItemDelete"
         android:title="刪除步驟"/>
