--- a/SOP_v1/app/src/main/res/menu/menu_ballot.xml
+++ b/SOP_v1/app/src/main/res/menu/menu_ballot.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/menuItemSearch"
-        android:title="搜尋"
-        android:icon="@drawable/search"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
-
-    <item android:id="@+id/action_certificate"
-        android:title="certificate"
+    <item android:id="@+id/action_edit"
+        android:title="編輯"
         android:orderInCategory="80"
-        android:icon="@drawable/certificate"
+        android:icon="@drawable/edit"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_upload"
+        android:title="上傳"
+        android:orderInCategory="80"
+        android:icon="@drawable/upload"
         app:showAsAction="ifRoom" />
 
     <item
