串接部分API功能完成
除了搜尋專案、編輯步驟、複製步驟未完成

--- a/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
+++ b/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/contextMenuItemLook"
+        android:title="查看此步驟"/>
+
     <item android:id="@+id/contextMenuItemAddCommon"
-        android:title="新增一般步驟"/>
+        android:title="新增單一步驟"/>
 
     <item android:id="@+id/contextMenuItemAddParallel"
         android:title="新增平行步驟"/>
@@ -13,7 +16,5 @@
     <item android:id="@+id/contextMenuItemEdit"
         android:title="編輯步驟"/>
 
-    <item android:id="@+id/contextMenuItemCopy"
-        android:title="複製步驟"/>
 
 </menu>
