--- a/SOP_v1/app/src/main/res/layout/add_step_dialog.xml
+++ b/SOP_v1/app/src/main/res/layout/add_step_dialog.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="步驟說明:"/>
+        android:text="攜帶物品:"/>
 
     <EditText
         android:id="@+id/edtStepExam"
