--- a/SOP_v1/app/src/main/res/layout/content_detail_step.xml
+++ b/SOP_v1/app/src/main/res/layout/content_detail_step.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="步驟說明:"
+        android:text="攜帶物品:"
         android:id="@+id/textView2"
         android:textSize="25dp"
         android:layout_alignParentTop="true"
