--- a/SOP_v1/app/src/main/res/menu/main.xml
+++ b/SOP_v1/app/src/main/res/menu/main.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menuItemSearch"
+        android:title="搜尋"
+        android:icon="@drawable/search"
+        app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
     <item android:id="@+id/action_certificate"
         android:title="certificate"
         android:orderInCategory="80"
