--- a/SOP_v1/app/src/main/res/layout/add_parallel_step_dialog.xml
+++ b/SOP_v1/app/src/main/res/layout/add_parallel_step_dialog.xml
@@ -6,13 +6,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="平行步驟1:"/>
+        android:text="單一步驟名稱:"/>
 
     <EditText
         android:id="@+id/edtParallelStep1Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+<!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,4 +52,5 @@
         android:id="@+id/edtParallelStep5Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+        -->
 </LinearLayout>
