--- a/SOP_v1/app/src/main/res/layout/sop_list_items.xml
+++ b/SOP_v1/app/src/main/res/layout/sop_list_items.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,30 +14,37 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
 
+    <ImageButton
+        android:id="@+id/delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="#00000000"
+        android:focusable="false"
+        android:layout_toLeftOf="@+id/edit"
+        android:layout_toStartOf="@+id/edit" />
 
 
-        <ImageButton
-            android:id="@+id/delete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="#00000000"
-            android:focusable="false" />
+    <ImageButton
+        android:id="@+id/edit"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="#00000000"
+        android:focusable="false"
+        android:layout_toLeftOf="@+id/copy"
+        android:layout_toStartOf="@+id/copy" />
 
-        <ImageButton
-            android:id="@+id/edit"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="#00000000"
-            android:focusable="false" />
 
-        <ImageButton
-            android:id="@+id/copy"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="#00000000"
-            android:focusable="false" />
+    <ImageButton
+        android:id="@+id/copy"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="#00000000"
+        android:focusable="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
