--- a/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
+++ b/SOP_v1/app/src/main/res/menu/context_menu_expandable_listview.xml
@@ -3,18 +3,22 @@
     <item android:id="@+id/contextMenuItemLook"
         android:title="查看此步驟"/>
 
-    <item android:id="@+id/contextMenuItemAddCommon"
-        android:title="新增單一步驟"/>
-
     <item android:id="@+id/contextMenuItemAddParallel"
         android:title="新增平行步驟"/>
-
-
+<!--
+    <item android:id="@+id/contextMenuItemAddCommon"
+        android:title="新增單一步驟"/>
+-->
     <item android:id="@+id/contextMenuItemDelete"
         android:title="刪除步驟"/>
 
     <item android:id="@+id/contextMenuItemEdit"
         android:title="編輯步驟"/>
 
+    <item android:id="@+id/contextMenuItemMoveUp"
+        android:title="上移一層"/>
+
+    <item android:id="@+id/contextMenuItemMoveDown"
+        android:title="下移一層"/>
 
 </menu>
